Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
   <div class="container">
     <h1 class="text-center text-danger mt-2">Radio en vivo</h1>
     <audio controls autoplay preload="none" src="https://radios.yanapak.org/frigosur"></audio>
+    <footer class="text-white">
+    Diseño y puesta al aire por Juan Martinez <br/>
+    2023 Copyright
+    Todos los derechos reservados
+  </footer>
   </div>
-</body>
-
+  </body>
 </html>
