Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -11,14 +11,16 @@
 </head>
 
 <body>
-  <div class="container">
+<div class="container justify-content-center">
     <h1 class="text-center text-danger mt-2">Radio en vivo</h1>
     <audio controls autoplay preload="none" src="https://radios.yanapak.org/frigosur"></audio>
     <footer class="text-white">
-    Diseño y puesta al aire por Juan Martinez <br/>
+    <p>Diseño y puesta al aire por Juan Martinez
+    </p>
+    <p>
     2023 Copyright
     Todos los derechos reservados
+    </p>
   </footer>
-  </div>
-  </body>
+</body>
 </html>
