--- a/index.html
+++ b/index.html
@@ -6,21 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./css/bootstrap.css"/>
     <link rel="stylesheet" href="./css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="./css/style.css"/>
+    <link rel="stylesheet" preload href="./css/style.css"/>
+    <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
     <title>Radio en vivo</title>
 </head>
 
 <body>
-<div class="container justify-content-center">
+<div class="container mt-2">
     <h1 class="text-center text-danger mt-2">Radio en vivo</h1>
     <audio controls autoplay preload="none" src="https://radios.yanapak.org/frigosur"></audio>
     <footer class="text-white">
-    <p>Diseño y puesta al aire por Juan Martinez
-    </p>
-    <p>
-    2023 Copyright
+    <p>Diseño y puesta al aire por Juan Martinez <br>
+    Copyright 2023, Montevideo Uruguay<br>
     Todos los derechos reservados
     </p>
   </footer>
+</div>
 </body>
 </html>
