--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 </head>
 
 <body>
-<div class="container mt-2">
-  <h1 class="text-center text-danger mt-2">Radio en vivo</h1>
+<span id="horaActual" class="text-white text-start"></span>
+<div class="container col-7 mt-2">
+  <h1 class="text-danger text-center">Radio en vivo</h1>
   <!-- Player -->
   <main class="player">
     <!-- Title -->
@@ -31,6 +32,7 @@
         <i id="play" class="fas fa-play">
         </i>
         </button>
+        <span class="playing">Detenido</span>
      </section>
   </main>
     <footer class="text-white">
@@ -41,4 +43,6 @@
   </footer>
 </div>
 </body>
-</html>
+<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+    crossorigin="anonymous"></script>
+    </html>
