--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 
 <body>
 <span id="horaActual" class="text-white text-start"></span>
-<div class="container col-7 mt-2">
+<div class="container mt-2">
   <h1 class="text-danger text-center">Radio en vivo</h1>
   <!-- Player -->
-  <main class="player">
+  <main class="player mx-auto">
     <!-- Title -->
     <h2 class="title" id="title">Disfruta de la mejor música</h2>
     <!-- Cover -->
