Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- Cover -->
     <img src="https://e1.pxfuel.com/desktop-wallpaper/68/402/desktop-wallpaper-4035-radio-studio-studio.jpg" alt="" class="cover" id="cover">
     <!-- Audio HTML Media elememt -->
-     <audio preload src="https://radios.yanapak.org/frigosur" id="audio"></audio>
+     <audio preload="true" type="stream/live" src="https://radios.yanapak.org/frigosur" id="audio"></audio>
     <!-- Controls -->
     <section class="controls">
       <button class="play">
