--- a/index.html
+++ b/index.html
@@ -21,20 +21,24 @@
   <h1 class="text-danger text-center">Radio en vivo</h1>
   <!-- Player -->
   <main class="player mx-auto">
-    <!-- Title -->
-    <h2 class="title" id="title">Disfruta de la mejor música</h2>
-    <!-- Cover -->
-    <img src="https://e1.pxfuel.com/desktop-wallpaper/68/402/desktop-wallpaper-4035-radio-studio-studio.jpg" alt="" class="cover" id="cover">
-    <!-- Audio HTML Media elememt -->
-     <audio preload="true" type="stream/live" src="https://radios.yanapak.org/frigosur" id="audio"></audio>
-    <!-- Controls -->
-    <section class="controls">
-      <button class="play">
-        <i id="play" class="fas fa-play">
-        </i>
-        </button>
-        <span class="playing">Detenido</span>
-     </section>
+    <!-- BEGINS: AUTO-GENERATED MUSES RADIO PLAYER CODE -->
+<script type="text/javascript" src="https://hosted.muses.org/mrp.js"></script>
+<script type="text/javascript">
+MRP.insert({
+'url':'https://radios.yanapak.org/frigosur',
+'codec':'aac',
+'volume':100,
+'autoplay':false,
+'jsevents':true,
+'buffering':0,
+'title':'La mejor música ',
+'wmode':'transparent',
+'skin':'oldradio',
+'width':205,
+'height':132
+});
+</script>
+<!-- ENDS: AUTO-GENERATED MUSES RADIO PLAYER CODE -->
   </main>
     <footer class="text-white">
     <p>Diseño y puesta al aire por Juan Martinez <br>
@@ -44,4 +48,6 @@
   </footer>
 </div>
 </body>
-</html>
+<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+    crossorigin="anonymous"></script>
+        </html>
