--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <!-- Cover -->
     <img src="https://e1.pxfuel.com/desktop-wallpaper/68/402/desktop-wallpaper-4035-radio-studio-studio.jpg" alt="" class="cover" id="cover">
     <!-- Audio HTML Media elememt -->
-     <audio id="audio"><source src="https://radios.yanapak.org/frigosur" type="audio/aac"></audio>
-    <!-- Controls -->
+     <audio preload="none" id="audio" type="media"><source src="https://radios.yanapak.org/frigosur" type="audio/aac"></audio>
+      <!-- Controls -->
     <section class="controls">
       <button class="play">
         <i id="play" class="fas fa-play">
