--- a/index.html
+++ b/index.html
@@ -2,48 +2,39 @@
 <html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="./css/bootstrap.css"/>
-    <link rel="stylesheet" href="./css/bootstrap.min.css"/>
-    <link rel="stylesheet" preload href="./css/style.css"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css"/>
-    <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
-    <link rel="shortcut icon" href="IMG_0674.ico" type="image/x-icon" />
-    <title>Radio en vivo</title>
-    <script src="js/main.js" defer>
-    </script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="./css/bootstrap.css" />
+  <link rel="stylesheet" href="./css/bootstrap.min.css" />
+  <link rel="stylesheet" preload href="./css/style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css" />
+  <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
+  <link rel="shortcut icon" href="IMG_0674.ico" type="image/x-icon" />
+  <title>Radio en vivo</title>
+  <script src="js/main.js" defer>
+  </script>
 </head>
 
 <body>
-<span id="horaActual" class="text-white text-start"></span>
-<div class="container mt-2">
-  <h1 class="text-danger text-center">Radio en vivo</h1>
-  <!-- Player -->
-  <main class="player mx-auto">
-    <!-- Title -->
-    <h2 class="title" id="title">Disfruta de la mejor música</h2>
-    <!-- Cover -->
-    <img src="https://e1.pxfuel.com/desktop-wallpaper/68/402/desktop-wallpaper-4035-radio-studio-studio.jpg" alt="" class="cover" id="cover">
-    <!-- Audio HTML Media elememt -->
-     <audio preload="none" id="audio" type="media"><source src="https://radios.yanapak.org/frigosur" type="audio/aac"></audio>
-      <!-- Controls -->
-    <section class="controls">
-      <button class="play">
-        <i id="play" class="fas fa-play">
-        </i>
-        </button>
-        <span class="playing">Detenido</span>
-     </section>
-  </main>
+  <span id="horaActual" class="text-white text-start"></span>
+  <div class="container mt-2">
+    <h1 class="text-danger text-center">Radio en vivo</h1>
+    <!-- Player -->
+    <main class="mx-auto">
+      <!-- Title -->
+      <h2 class="text-start text-white" id="title">Disfruta de la mejor música</h2>
+      <iframe src="https://zeno.fm/player/herzfm" width="100%" height="250" frameborder="0" scrolling="no"></iframe><a
+        href="https://zeno.fm/" target="_blank" style="display: block; font-size: 0.9em; line-height: 10px; opacity: 0.7;"></a>
+    </main>
     <footer class="text-white">
-    <p>Diseño y puesta al aire por Juan Martinez <br>
-    Copyright 2023, Montevideo Uruguay<br>
-    Todos los derechos reservados
-    </p>
-  </footer>
-</div>
+      <p>Diseño y puesta al aire por Juan Martinez <br>
+        Copyright 2023, Montevideo Uruguay<br>
+        Todos los derechos reservados
+      </p>
+    </footer>
+  </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
-    crossorigin="anonymous"></script>
-            </html>
+  crossorigin="anonymous"></script>
+
+</html>
