--- a/index.html
+++ b/index.html
@@ -23,8 +23,13 @@
     <main class="mx-auto">
       <!-- Title -->
       <h2 class="text-start text-white" id="title">Disfruta de la mejor música</h2>
-      <iframe src="https://zeno.fm/player/herzfm" width="100%" height="250" frameborder="0" scrolling="no"></iframe><a
+      <iframe class="mb-2 mt-2" src="https://zeno.fm/player/herzfm" width="100%" height="250" frameborder="0" scrolling="no"></iframe><a
         href="https://zeno.fm/" target="_blank" style="display: block; font-size: 0.9em; line-height: 10px; opacity: 0.7;"></a>
+        <hr>
+        <h5 class="text-white mb-2">Reproductor alternativo:</h5>
+        <audio preload="none" controls="controls" type="media"><source src="https://radios.yanapak.org/frigosur" type="audio/ogg"></audio>
+        <br>
+        <small class="text-white" style="font-size: xx-small">*Buena calidad de audio con menos uso de datos</small>
     </main>
     <footer class="text-white">
       <p>Diseño y puesta al aire por Juan Martinez <br>
@@ -36,5 +41,4 @@
 </body>
 <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
   crossorigin="anonymous"></script>
-
 </html>
