Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -13,9 +13,13 @@
   <title>Radio en vivo</title>
   <script src="js/main.js" defer>
   </script>
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </head>
 
 <body>
+    <script class="script" type="text/javascript">
+        swal("Novedades", "Se agregó un Reproductor secundario para poder escuchar con menos uso de datos. Proximamente se agregará una seccion de contacto para que puedas comunicarte o dejarnos tus comentarios, gracias por escuchar Herz FM", "info")
+      </script>
   <span id="horaActual" class="text-white text-start"></span>
   <div class="container mt-2">
     <h1 class="text-danger text-center">Radio en vivo</h1>
