--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 
 <head>
   <meta charset="UTF-8">
@@ -14,28 +14,32 @@
   <script src="js/main.js" defer>
   </script>
   <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+  <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
 </head>
 
 <body>
-    <script class="script" type="text/javascript">
-        swal("Novedades", "Se agregó un Reproductor secundario para poder escuchar con menos uso de datos. Proximamente se agregará una seccion de contacto para que puedas comunicarte o dejarnos tus comentarios, gracias por escuchar Herz FM", "info")
-      </script>
-  <span id="horaActual" class="text-white text-start"></span>
-  <div class="container mt-2">
+  <span id="horaActual" class="text-white text-start"></span><br>
+  <span class="text-white">Visitas:</span><div class="elfsight-app-bc6bfd50-d9ce-4df4-abcc-48d319ce048d"></div>
+  <div class="container mt-2 mb-2">
     <h1 class="text-danger text-center">Radio en vivo</h1>
     <!-- Player -->
     <main class="mx-auto">
       <!-- Title -->
       <h2 class="text-start text-white" id="title">Disfruta de la mejor música</h2>
-      <iframe class="mb-2 mt-2" src="https://zeno.fm/player/herzfm" width="100%" height="250" frameborder="0" scrolling="no"></iframe><a
-        href="https://zeno.fm/" target="_blank" style="display: block; font-size: 0.9em; line-height: 10px; opacity: 0.7;"></a>
-        <hr>
-        <h5 class="text-white mb-2">Reproductor alternativo:</h5>
-        <audio preload="none" controls="controls" type="media"><source src="https://radios.yanapak.org/frigosur" type="audio/ogg"></audio>
-        <br>
-        <small class="text-white" style="font-size: xx-small">*Buena calidad de audio con menos uso de datos</small>
+      <iframe title="player-zeno" class="mb-2 mt-2" src="https://zeno.fm/player/herzfm" width="100%" height="250"
+        frameborder="0" scrolling="yes"></iframe><a href="https://zeno.fm/" target="_blank"
+        style="display: block; font-size: 0.9em; line-height: 10px; opacity: 0.7;"></a>
+      <hr>
+      <h5 class="text-white mb-2">Reproductor alternativo:</h5>
+      <audio preload="none" controls="controls" type="media">
+        <source src="https://radios.yanapak.org/frigosur" type="audio/ogg">
+      </audio>
+      <br>
+      <small class="text-white" style="font-size: xx-small">*Buena calidad de audio con menos uso de datos</small>
     </main>
-    <footer class="text-white">
+  </div>
+  <div class="footer pt-2 mt-2">
+    <footer class="text-white mt-2">
       <p>Diseño y puesta al aire por Juan Martinez <br>
         Copyright 2023, Montevideo Uruguay<br>
         Todos los derechos reservados
@@ -45,4 +49,5 @@
 </body>
 <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
   crossorigin="anonymous"></script>
+
 </html>
