--- a/index.html
+++ b/index.html
@@ -14,12 +14,10 @@
   <script src="js/main.js" defer>
   </script>
   <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-  <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
 </head>
 
 <body>
-  <span id="horaActual" class="text-white text-start"></span><br>
-  <span class="text-white">Visitas:</span><div class="elfsight-app-bc6bfd50-d9ce-4df4-abcc-48d319ce048d"></div>
+  <span id="horaActual" class="text-white text-start"></span>
   <div class="container mt-2 mb-2">
     <h1 class="text-danger text-center">Radio en vivo</h1>
     <!-- Player -->
