Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         swal("Novedades", "Se agregó un Reproductor secundario para poder escuchar con menos uso de datos. Proximamente se agregará una seccion de contacto para que puedas comunicarte o dejarnos tus comentarios, gracias por escuchar Herz FM", "info")
       </script>
       <script type="text/javascript">
-       swal("Importante", "Estamos teniendo problemas con el servidor de transmision se está tratando de solucionar lo mas rapido posible","info") 
+       swal("Solucionado", "Solucionamos el problema con el servidor ya estamos al aire normalmente. Disculpe las molestias ocasionadas y muchas gracias por escuchar","success") 
       </script>
   <span id="horaActual" class="text-white text-start"></span>
   <div class="container mt-2">
