--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
   <link rel="shortcut icon" href="IMG_0674.ico" type="image/x-icon" />
   <title>Radio en vivo</title>
-  <script src="js/main.js" defer>
+  <script src="./js/main.js" defer>
   </script>
   <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </head>
@@ -28,7 +28,11 @@
         href="https://zeno.fm/" target="_blank" style="display: block; font-size: 0.9em; line-height: 10px; opacity: 0.7;"></a>
         <hr>
         <h5 class="text-white mb-2">Reproductor alternativo:</h5>
-        <audio preload="none" controls="controls" type="media"><source src="https://radios.yanapak.org/frigosur" type="audio/ogg"></audio>
+        <script type="text/javascript">var cstrFreePlayerUid = 581091;var cstrFreePlayerTheme = "yellow";var cstrFreePlayerColor = "";</script>
+<script type="text/javascript" src="//corscdn.caster.fm/freeplayer/FreePlanPlayerEmbed.js"></script>
+<!--   DO NOT REMOVE THE LINKS BELOW, THEY  WILL BE HIDDEN (AND WILL HELP US A LOT)   -->
+<a id="cstrFreePlayerBL1" href="//www.caster.fm/">Free Shoutcast Hosting</a><a id="cstrFreePlayerBL2" href="//www.caster.fm/">Radio Stream Hosting</a>
+<div id="cstrFreePlayerDiv"></div>
         <br>
         <small class="text-white" style="font-size: xx-small">*Buena calidad de audio con menos uso de datos</small>
     </main>
