--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
       </audio>
       <small class="text-white" style="font-size: xx-small">*Calidad regular de audio con menos uso de datos</small>
     </main>
-    <div class="container">
+    <div class="container mb-5">
       <div class="row">
         <div class="live-chat col">
           <h3 class="text-white">Chat</h3>
-          <iframe src="http://freeuk27.listen2myradio.com/chat/frame.php?frameid=3351412" frameborder="0"></iframe>
+          <iframe style="width:100%; height: 100%;" src="http://freeuk27.listen2myradio.com/chat/frame.php?frameid=3351412" frameborder="0"></iframe>
         </div>
       </div>
     </div>
