--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div class="row">
         <div class="live-chat col">
           <h3 class="text-white">Chat</h3>
-          <iframe style="width:100%; height: 100%;" src="http://freeuk27.listen2myradio.com/chat/frame.php?frameid=3351412" frameborder="0"></iframe>
+          <a class="btn btn-info" href="http://freeuk27.listen2myradio.com/chat/frame.php?frameid=3351412" target="_blank">Abrir chat</a>
         </div>
       </div>
     </div>
