--- a/index.html
+++ b/index.html
@@ -19,31 +19,42 @@
 <body>
   <span id="horaActual" class="text-white text-start"></span>
   <div class="container mt-2">
-    <h1 class="text-danger text-center">Radio en vivo</h1>
-    <!-- Player -->
-    <main class="mx-auto">
-      <!-- Title -->
-      <h2 class="text-start text-white" id="title">Disfruta de la mejor música</h2>
-      <h5 class="text-white mt-2 mb-2">Reproductor principal Audio HD:</h5>
-      <iframe class="mb-2 mt-2" src="https://zeno.fm/player/herzfm" width="100%" height="250" frameborder="0"
-        scrolling="no"></iframe><a href="https://zeno.fm/" target="_blank"
-        style="display: block; font-size: 0.9em; line-height: 10px; opacity: 0.7;"></a>
-      <hr>
-      <h5 class="text-white mb-2">Reproductor alternativo:</h5>
-      <audio id="audio" controls="controls">
-        <source src="https://freeuk27.listen2myradio.com/live.mp3?typeportmount=s1_35579_stream_487211747" type="audio/aac">
-      </audio>
-      <small class="text-white" style="font-size: xx-small">*Calidad regular de audio con menos uso de datos</small>
-    </main>
-    <div class="container mb-5">
-      <div class="row">
-        <div class="live-chat col">
-          <h3 class="text-white">Chat</h3>
-          <a class="btn btn-info" href="http://freeuk27.listen2myradio.com/chat/frame.php?frameid=3351412" target="_blank">Abrir chat</a>
+    <div class="row d-flex">
+      <div class="col-8">
+        <h1 class="text-danger text-center">Radio en vivo</h1>
+        <!-- Player -->
+        <main class="mx-auto">
+          <!-- Title -->
+          <h2 class="text-start text-white" id="title">Disfruta de la mejor música</h2>
+          <h5 class="text-white mt-2 mb-2">Reproductor principal Audio HD:</h5>
+          <iframe class="mb-2 mt-2" src="https://zeno.fm/player/herzfm" width="100%" height="250" frameborder="0"
+            scrolling="no"></iframe><a href="https://zeno.fm/" target="_blank"
+            style="display: block; font-size: 0.9em; line-height: 10px; opacity: 0.7;"></a>
+          <hr>
+          <h5 class="text-white mb-2">Reproductor alternativo:</h5>
+          <audio id="audio" controls="controls">
+            <source src="https://freeuk27.listen2myradio.com/live.mp3?typeportmount=s1_35579_stream_487211747" type="audio/aac">
+          </audio>
+          <small class="text-white" style="font-size: xx-small">*Calidad regular de audio con menos uso de datos</small>
+        </main>
+      </div>
+      <div class="col-4 position-end">
+        <div class="d-none" id="collapseExample">
+            <h3 class="text-white">Chat en vivo</h3>
+            <iframe style="width: 290px; height: 640px;" src="chat.html" frameborder="0"></iframe>
         </div>
       </div>
     </div>
   </div>
+    <div class="container mb-5">
+      <div class="row">
+        <div class="live-chat col">
+          <button type="button" class="btn btn-info" id="chat">
+            Mostrar chat
+          </button>
+        </div>
+      </div>
+    </div>
   <footer class="text-white mt-4">
     <p>Diseño y puesta al aire por Juan Martinez <br>
       Copyright 2023, Montevideo Uruguay<br>
