--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
           <h5 class="text-white mb-2">Reproductor alternativo:</h5>
           <audio id="audio" controls="controls">
             <source src="https://freeuk27.listen2myradio.com/live.mp3?typeportmount=s1_35579_stream_487211747" type="audio/aac">
-          </audio>
+          </audio><br>
           <small class="text-white" style="font-size: xx-small">*Calidad regular de audio con menos uso de datos</small>
         </main>
       </div>
       <div class="col-2 position-end">
         <div class="d-none" id="collapseExample">
             <h3 class="text-white">Chat en vivo</h3>
-            <iframe style="width: 290px; height: 590px;" src="chat.html" frameborder="0"></iframe>
+            <iframe class="mt-2" style="width: 290px; height: 790px;" src="chat.html" frameborder="0"></iframe>
         </div>
       </div>
     </div>
