--- a/chat.html
+++ b/chat.html
@@ -19,7 +19,7 @@
             align-items: center;
             text-align: center;
             width: 290px;
-            height: 590px;
+            height: 100%;
         }
 
         table {
