--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <hr>
           <h5 class="text-white mb-2">Reproductor alternativo:</h5>
           <audio id="audio" controls="controls">
-            <source src="https://freeuk27.listen2myradio.com/live.mp3?typeportmount=s1_35579_stream_487211747" type="audio/aac">
+            <source src="https://freeuk27.listen2myradio.com/live.mp3?typeportmount=s1_35579_stream_487211747" type="audio/mpg">
           </audio><br>
           <small class="text-white" style="font-size: xx-small">*Calidad regular de audio con menos uso de datos</small>
         </main>
