Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <hr>
           <h5 class="text-white mb-2">Reproductor alternativo:</h5>
           <audio id="audio" controls="controls">
-            <source src="https://yanapak.org/frigosur" type="audio/mpg">
+            <source src="https://radios.yanapak.org/frigosur" type="audio/mpg">
           </audio><br>
           <small class="text-white" style="font-size: xx-small">*Calidad regular de audio con menos uso de datos</small>
         </main>
