Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             style="display: block; font-size: 0.9em; line-height: 10px; opacity: 0.7;"></a>
           <hr>
           <h5 class="text-white mb-2">Reproductor alternativo:</h5>
-          <audio id="audio" controls="controls">
+          <audio preload="3" type="media" id="audio" controls="controls">
             <source src="https://radios.yanapak.org/frigosur" type="audio/mpg">
           </audio><br>
           <small class="text-white" style="font-size: xx-small">*Calidad regular de audio con menos uso de datos</small>
