--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 <body>
   <span id="horaActual" class="text-white text-start"></span>
   <div class="container mt-2">
-    <div class="row>
-      <div class="col">
+    <div class="row d-flex">
+      <div class="col-10">
         <h1 class="text-danger text-center">Radio en vivo</h1>
         <!-- Player -->
         <main class="mx-auto">
@@ -36,15 +36,20 @@
           <br>
           <small class="text-white" style="font-size: xx-small">*Calidad regular de audio con menos uso de datos</small>
         </main>
+        </div>
+        <div class="col-2 position-end">
+          <div class="d-none" id="collapseExample">
+              <h3 class="text-white">Chat en vivo</h3>
+              <iframe class="mt-2" style="width: 260px; height: 790px;" src="chat.html" frameborder="0"></iframe>
+          </div>
       </div>
       </div>
     </div>
-  </div>
     <div class="container mb-5">
       <div class="row">
         <div class="live-chat col">
             <h3 class="text-white">Chat en vivo</h3>
-          <a type="button" class="btn btn-info" id="chat" href="chat.html" target="_blank">
+          <a type="button" class="btn btn-info" id="chat" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
             Mostrar chat
           </a>
         </div>
