--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             style="display: block; font-size: 0.9em; line-height: 10px; opacity: 0.7;"></a>
           <hr>
           <h5 class="text-white mb-2">Reproductor alternativo:</h5>
-          <audio preload="none" id="audio" type="media" controls="controls"><source src="https://radios.yanapak.org/frigosur" type="audio/aac"></audio>
+          <audio preload="none" id="audio" type="media" controls="controls"><source src="https://freeuk27.listen2myradio.com/live.mp3?typeportmount=s1_35579_stream_122878856" type="audio/aac"></audio>
           <br>
           <small class="text-white" style="font-size: xx-small">*Calidad regular de audio con menos uso de datos</small>
         </main>
