--- a/index.html
+++ b/index.html
@@ -18,26 +18,16 @@
 
 <body>
   <span id="horaActual" class="text-white text-start"></span>
-  <div class="container mt-2">
+  <div class="container mt-5">
     <div class="row">
       <div class="col">
-        <h1 class="text-danger text-center">Radio en vivo</h1>
-        <!-- Player -->
+        <h1 class="text-danger text-center mt-4">Importante:</h1>
         <main class="mx-auto">
-          <!-- Title -->
-          <h2 class="text-start text-white" id="title">Disfruta de la mejor música</h2>
-          <h5 class="text-white mt-2 mb-2">Reproductor principal Audio HD:</h5>
-          <iframe class="mb-2 mt-2" src="https://zeno.fm/player/herzfm" width="100%" height="250" frameborder="0"
-            scrolling="no"></iframe><a href="https://zeno.fm/" target="_blank"
-            style="display: block; font-size: 0.9em; line-height: 10px; opacity: 0.7;"></a>
-          <hr>
-          <h5 class="text-white mb-2">Reproductor alternativo:</h5>
-          <!-- Inicio. radio hosting USAstreams.com html5 player -->
-<!-- Licencia: GRATIS-XDF4543ERF -->
-<iframe name="contenedorPlayer" class="cuadroBordeado" allow="autoplay" width="100%" height="75px" marginwidth=0 marginheight=0 hspace=0 vspace=0 frameborder=0 scrolling=no  src="https://cp.usastreams.com/pr2g/APPlayerRadioHTML5.aspx?stream=https://radios.yanapak.org/frigosur&fondo=05&formato=ogg&color=14&titulo=2&autoStart=20&vol=10&tipo=201&nombre=Herz+FM+server+2&botonPlay=2&imagen=https://cp.usastreams.com/playerHTML5/img/cover.png&server=https://radios.yanapak.org/status.xslCHUMILLASmount=/frigosur"></iframe>
-<!-- En players responsive puede modificar el weight a sus necesidades, Por favor no modifique el resto del codigo para poder seguir ofreciendo este servicio gratis  -->
-<!-- Fin. USAstreams.com html5 player -->
-          <small class="text-white" style="font-size: xx-small">*Calidad regular de audio con menos uso de datos</small>
+          <h3 class="text-white">
+            A partir de este momento nos podes escuchar en nuestra propia web <a href="https:radioherzfm.com">click aca</a> <br>
+            Nuestra pagina web ahora es mas corta, simple y facil de recordar donde nos podes escuchar como siempre, con la mejor musica y compañia. <br>
+            Gracias por escuchar Herz FM!
+          </h3>
         </main>
         </div>
       </div>
