Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <h1 class="text-danger text-center mt-4">Importante:</h1>
         <main class="mx-auto">
           <h3 class="text-white">
-            A partir de este momento nos podes escuchar en nuestra propia web <a href="https:radioherzfm.com">click aca</a> <br>
+            A partir de este momento nos podes escuchar en nuestra propia web <a href="https://radioherzfm.com">click aca</a> <br>
             Nuestra pagina web ahora es mas corta, simple y facil de recordar donde nos podes escuchar como siempre, con la mejor musica y compañia. <br>
             Gracias por escuchar Herz FM!
           </h3>
